--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,6 +19,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Build
+        run: |
+          poetry build
       - name: Run image
         uses: abatilo/actions-poetry@v2
         with:
