--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Build
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
         run: |
           poetry build
       - name: Run image
